--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3"
+    "tailwindcss": "3.3.3",
+    "template-data-table": "file:"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^4.34.1"
